--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -5,7 +5,9 @@ date: "`r Sys.Date()`"
 output:
   #word_document: default
   #pdf_document: default
-  html_document: default
+  html_document: 
+    theme: darkly
+    
     
 title: "ML1"
 ---
@@ -14,6 +16,21 @@ title: "ML1"
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache=TRUE)
 ```
 
+```{css REFINE OR DELETE, echo=FALSE}
+pre {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+pre[class] {
+  max-height: 100px;
+}
+
+img{
+  width: 100%;
+  height: auto;
+}
+```
 
 ```{r load_packages, echo =FALSE, cache=TRUE}
 
@@ -823,8 +840,9 @@ ggplot(dat_amount_claims, aes(x = fitted_zip, y = AMOUNT_CLAIMS)) +
 ```
 
 
+# TODO Binomial
 ## Binomial
-# TODO
+
 
 ```{r Binomial_Model, cache=TRUE}
 
@@ -1087,6 +1105,7 @@ Zusammengefasst hat das Entfernen der Variable INSR_TYPE nur geringe Auswirkunge
 ## Generalised Additive Model (GAM)
 # TODO description
 ```{r GAM, cache=TRUE}
+str(dat_amount_claims)
 # Convert unordered factors to factors
 dat_amount_claims$SEX <- as.factor(dat_amount_claims$SEX)
 dat_amount_claims$INSR_TYPE <- as.factor(dat_amount_claims$INSR_TYPE)
@@ -1147,10 +1166,126 @@ cat("Overdispersion ratio (Deviance / DF) for the GAM model:",
 p_value_gam <- 1 - pchisq(deviance_gam, df.residual(gam_model))
 cat("p-value for the GAM model:", p_value_gam, "\n")
 
-
+#Calcula RMSE
+rmse_gam <- sqrt(mean((dat_amount_claims$AMOUNT_CLAIMS - dat_amount_claims$predicted_claims)^2))
+cat("RMSE of the GAM model:", rmse_gam, "\n")
 
 ```
 
+
+## GAM v3 - Predicting Premium Amount
+```{r GAM v3}
+# Fit a Generalized Additive Model (GAM) to the data to predict `PREMIUM`
+
+# Check dataset structure and set up training/testing data
+set.seed(123)  # For reproducibility
+train_indices <- sample(seq_len(nrow(dat_amount_claims)), size = 0.7 * nrow(dat_amount_claims))
+train_data <- dat_amount_claims[train_indices, ]
+test_data <- dat_amount_claims[-train_indices, ]
+
+# Fit a GAM model to predict `PREMIUM`
+gam_premium <- gam(
+  PREMIUM ~ s(INSURED_VALUE) + s(AGE_VEHICLE) + s(SEATS_NUM) + 
+    s(CCM_TON) + INSR_TYPE + USAGE + TYPE_VEHICLE,
+  family = Gamma(link = "log"),  # Suitable for continuous, positive, skewed data
+  data = train_data
+)
+summary(gam_premium)
+# Model evaluation
+# Predict on test set for PREMIUM
+test_data$premium_predictions <- predict(gam_premium, newdata = test_data, type = "response")
+
+# Calculate RMSE for PREMIUM predictions
+premium_rmse <- sqrt(mean((test_data$PREMIUM - test_data$premium_predictions)^2))
+print(paste("Premium RMSE:", premium_rmse))
+
+# Visualize actual vs predicted PREMIUM
+ggplot(test_data, aes(x = PREMIUM, y = premium_predictions)) +
+  geom_point(alpha = 0.5, color = "darkblue") +
+  geom_abline(intercept = 0, slope = 1, color = "red") +
+  labs(title = "Actual vs Predicted PREMIUM", x = "Actual PREMIUM", y = "Predicted PREMIUM") +
+  theme_minimal()
+
+# RMSE
+rmse_gam_premium <- sqrt(mean((test_data$PREMIUM - test_data$premium_predictions)^2))
+```
+
+## GAM v4 - Predicting Claims Amount
+```{r GAM v4}
+# Fit a GAM model to predict `AMOUNT_CLAIMS_PAID`
+gam_claims <- gam(
+  AMOUNT_CLAIMS ~ s(INSURED_VALUE) + s(AGE_VEHICLE) + s(SEATS_NUM) + 
+    s(CCM_TON) + INSR_TYPE + USAGE + TYPE_VEHICLE,
+  family = poisson(link = "log"),  # Suitable for count data
+  data = train_data
+)
+
+summary(gam_claims)
+
+# Model evaluation
+# Predict on test set for CLAIMS
+test_data$claims_predictions <- predict(gam_claims, newdata = test_data, type = "response")
+
+# Calculate RMSE for CLAIM predictions
+claims_rmse <- sqrt(mean((test_data$AMOUNT_CLAIMS - test_data$claims_predictions)^2))
+print(paste("Claims RMSE:", claims_rmse))
+
+# Visualize actual vs predicted CLAIMS
+ggplot(test_data, aes(x = AMOUNT_CLAIMS, y = claims_predictions)) +
+  geom_point(alpha = 0.5, color = "darkgreen") +
+  geom_abline(intercept = 0, slope = 1, color = "red") +
+  labs(title = "Actual vs Predicted CLAIMS", x = "Actual AMOUNT_CLAIMS_PAID", y = "Predicted AMOUNT_CLAIMS_PAID") +
+  theme_minimal()
+
+
+# RMSE 
+rmse_gam_claims <- sqrt(mean((test_data$AMOUNT_CLAIMS - test_data$claims_predictions)^2))
+cat("RMSE of the GAM model for CLAIMS:", rmse_gam_claims, "\n")
+
+```
+
+## GAM v5 - Predicting Number of Claims
+
+```{r Gam v5}
+#A GAM model is fitted to predict the number of claims over a 5-year period based on the characteristics SEX, INSR_TYPE, USAGE, TYPE_VEHICLE, MAKE, AGE_VEHICLE, SEATS_NUM, CCM_TON, INSURED_VALUE, and PREMIUM.
+
+# Convert unordered factors to factors
+dat_amount_claims$SEX <- as.factor(dat_amount_claims$SEX)
+dat_amount_claims$INSR_TYPE <- as.factor(dat_amount_claims$INSR_TYPE)
+dat_amount_claims$USAGE <- as.factor(dat_amount_claims$USAGE)
+dat_amount_claims$TYPE_VEHICLE <- as.factor(dat_amount_claims$TYPE_VEHICLE)
+dat_amount_claims$MAKE <- as.factor(dat_amount_claims$MAKE)
+
+# Fit a GAM model to predict the number of claims
+gam_model <- mgcv::gam(
+  AMOUNT_CLAIMS ~ SEX + INSR_TYPE + USAGE + TYPE_VEHICLE + MAKE +
+    s(AGE_VEHICLE, bs = "cr") +
+    s(SEATS_NUM, bs = "cr") +
+    s(CCM_TON, bs = "cr") +
+    s(INSURED_VALUE, bs = "cr") +
+    s(PREMIUM, bs = "cr"),
+  data = dat_amount_claims,
+  family = poisson(link = "log")
+)
+summary(gam_model)
+# Predict on the data for visualization
+dat_amount_claims$predicted_claims <- predict(gam_model, newdata = dat_amount_claims, type = "response")
+
+# Plot the predicted vs. actual claims
+
+ggplot(dat_amount_claims, aes(x = predicted_claims, y = AMOUNT_CLAIMS)) +
+  geom_point(color = "darkblue") +
+  geom_abline(intercept = 0, slope = 1, color = "red", linetype = "dashed") +
+  labs(x = "Predicted Claims", y = "Actual Claims",
+       title = "GAM: Predicted vs. Actual Claims") +
+  theme(plot.title = element_text(hjust = 0.5),
+        axis.title.x = element_text(face = "bold", colour = "blue", size = 12),
+        axis.title.y = element_text(face = "bold", colour = "blue", size = 12))
+
+# RMSE
+rmse_gam <- sqrt(mean((dat_amount_claims$AMOUNT_CLAIMS - dat_amount_claims$predicted_claims)^2))
+cat("RMSE of the GAM model:", rmse_gam, "\n")
+```
 ## Neural Network
 
 A neural network model is fitted to predict the premium amount based on the characteristics of the insured vehicles and the driver. The model is trained using the cleaned and transformed data, and the results are analyzed to evaluate the model's performance.
